--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -1,8 +1,10 @@
 .App {
-  min-height: 100vh;
+  height: 100vh;
   &-content {
     padding: 20px;
     width: 100%;
+    min-height: calc(100vh - 70px);
+
     &.center {
       display: flex;
       flex-direction: column;
@@ -10,5 +12,13 @@
       justify-content: center;
 
     }
+  }
+
+  .ant-card {
+    margin-bottom: 10px;
+    border-radius: 5px 30px 5px 30px;
+
+    border-color: transparent;
+    box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%), 0 5px 12px 4px rgb(0 0 0 / 9%);
   }
 }
