--- a/src/Components/Fragments/Header/Header.scss
+++ b/src/Components/Fragments/Header/Header.scss
@@ -2,4 +2,9 @@
   box-shadow: 0 0 20px -12px #000;
   height: 70px;
   user-select: none;
+  .header-navigation {
+    &__link {
+      margin: 0 5px;
+    }
+  }
 }
