--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@
 
   .ant-card {
     margin-bottom: 10px;
-    border-radius: 5px 30px 5px 30px;
+    border-radius: 5px;
 
     border-color: transparent;
     box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%), 0 5px 12px 4px rgb(0 0 0 / 9%);
